mail/themes/linux/mail/messenger.css
/* ... */
:root:-moz-lwtheme {
  --toolbar-bgcolor: rgba(255,255,255,.4);
  --toolbar-bgimage: none;

  --toolbarbutton-icon-fill-opacity: 1;
}

toolbar[brighttext] {
  --toolbarbutton-icon-fill-attention: #45a1ff;
}

#header-view-toolbar[brighttext],
#ab-toolbox > toolbar[brighttext],
.mail-toolbox > toolbar[brighttext],
#event-toolbox > toolbar[brighttext],
#compose-toolbox > toolbar[brighttext],
#headers-box > toolbar[brighttext],
#FormatToolbox > toolbar[brighttext]  {
  --toolbarbutton-text-color: #fff;
  --toolbarbutton-hover-background: rgba(255, 255, 255, .25);
  --toolbarbutton-hover-bordercolor: rgba(255, 255, 255, .5);
  --toolbarbutton-header-bordercolor: rgba(255, 255, 255, .25);

  --toolbarbutton-active-background: rgba(255, 255, 255, .4);
  --toolbarbutton-active-bordercolor: rgba(255, 255, 255, .7);
  --toolbarbutton-active-boxshadow: 0 0 0 1px rgba(255, 255, 255, .4) inset;

  --toolbarbutton-checkedhover-backgroundcolor: rgba(255, 255, 255, .5);
}

#ab-toolbox > toolbar:-moz-lwtheme,
.mail-toolbox > toolbar:-moz-lwtheme,
#compose-toolbox > toolbar:-moz-lwtheme {
  --toolbarbutton-text-color: currentColor;
  --toolbarbutton-hover-background: rgba(255, 255, 255, .25);
  --toolbarbutton-hover-bordercolor: rgba(0, 0, 0, .2);
  --toolbarbutton-header-bordercolor: rgba(0, 0, 0, .2);

  --toolbarbutton-active-background: rgba(70%, 70%, 70%, .25);
  --toolbarbutton-active-bordercolor: rgba(0, 0, 0, .3);
  --toolbarbutton-active-boxshadow: 0 0 2px rgba(0, 0, 0, .6) inset;

  --toolbarbutton-checkedhover-backgroundcolor: rgba(85%, 85%, 85%, .25);
}

/* Hide the titlebar explicitly on versions of GTK+ where
 * it's rendered by window manager. */
@media (-moz-gtk-csd-available: 0) {
  #titlebar {
    display: none;
  }
}

/* We draw to titlebar when Gkt+ CSD is available */
@media (-moz-gtk-csd-available) {
  :root[tabsintitlebar] > #titlebar:-moz-lwtheme {
    visibility: hidden;
  }
  :root[tabsintitlebar] > #titlebar-content:-moz-lwtheme {
    visibility: visible;
  }

  :root[tabsintitlebar][sizemode="normal"] > #titlebar {
    -moz-appearance: -moz-window-titlebar;
  }
  :root[tabsintitlebar][sizemode="maximized"] > #titlebar {
    -moz-appearance: -moz-window-titlebar-maximized;
  }

  /* The button box must appear on top of the navigator-toolbox in order for
   * click and hover mouse events to work properly for the button in the restored
   * window state. Otherwise, elements in the navigator-toolbox, like the menubar,
   * can swallow those events.
   */
  #titlebar-buttonbox {
    position: relative;
    z-index: 1;
  }

  .titlebar-button {
    padding: initial;
  }

  /* Render titlebar command buttons according to system config.
   * Use full scale icons here as the Gtk+ does.
   */
  @media (-moz-gtk-csd-minimize-button) {
    #titlebar-min {
      list-style-image: url("moz-icon://stock/window-minimize-symbolic");
      -moz-appearance: -moz-window-button-minimize;
    }
  }
  @media (-moz-gtk-csd-minimize-button: 0) {
    #titlebar-min {
      display: none;
    }
  }

  @media (-moz-gtk-csd-maximize-button) {
    #titlebar-max {
      list-style-image: url("moz-icon://stock/window-maximize-symbolic");
      -moz-appearance: -moz-window-button-maximize;
    }
    :root[sizemode="maximized"] #titlebar-max {
      list-style-image: url("moz-icon://stock/window-restore-symbolic");
      -moz-appearance: -moz-window-button-restore;
    }
  }
  @media (-moz-gtk-csd-maximize-button: 0) {
    #titlebar-max {
      display: none;
    }
  }

  @media (-moz-gtk-csd-close-button) {
    #titlebar-close {
      list-style-image: url("moz-icon://stock/window-close-symbolic");
      -moz-appearance: -moz-window-button-close;
    }
  }
  @media (-moz-gtk-csd-close-button: 0) {
    #titlebar-close {
      display: none;
    }
  }

  :root[tabsintitlebar] .titlebar-placeholder[type="caption-buttons"] {
    margin-inline-start: 10px;
  }
}

toolbar:not(.inline-toolbar):not(:-moz-lwtheme) {
  -moz-appearance: menubar;
  color: -moz-menubartext;
}

/*
 * Override the menulist icon forbidding in menu.css so that we can show
 * check-marks. radio-marks and folder icons. bug 443516
 */
.menulist-menupopup > menuitem > .menu-iconic-left,
menulist > menupopup >
  menuitem:-moz-any(.menuitem-iconic, [type="radio"], [type="checkbox"]) >
  .menu-iconic-left,
.menulist-menupopup > menu > .menu-iconic-left,
menulist > menupopup >
  menu:-moz-any(.menuitem-iconic, [type="radio"], [type="checkbox"]) >
  .menu-iconic-left {
  display: -moz-box;
}

/* ::::: toolbarbutton ::::: */

.toolbarbutton-1 {
  -moz-box-orient: vertical;
  -moz-context-properties: fill, fill-opacity;
  fill: currentColor;
  fill-opacity: var(--toolbarbutton-icon-fill-opacity);
}

toolbox[labelalign="end"] .toolbarbutton-1,
toolbox[labelalign="end"] .toolbarbutton-1[type="menu-button"]
  > .toolbarbutton-menubutton-button {
  -moz-box-orient: horizontal;
}

toolbox[labelalign="end"] > toolbar[mode="full"] .toolbarbutton-1 .toolbarbutton-text {
  padding-inline-start: 2px;
}

toolbox[labelalign="end"] > toolbar[mode="full"] deck .toolbarbutton-text {
  text-align: start;
}

.toolbarbutton-1[type="menu"] {
  -moz-binding: url("chrome://global/content/bindings/toolbarbutton.xml#menu-vertical");
}

toolbox[labelalign="end"] .toolbarbutton-1[type="menu"] {
  -moz-binding: url("chrome://global/content/bindings/toolbarbutton.xml#menu");
}

.toolbarbutton-1,
.toolbarbutton-menubutton-button {
  -moz-appearance: none;
  min-height: 24px;
  min-width: 32px;
  margin: 1px;
  padding: 1px 6px;
  border: 1px solid transparent;
  border-radius: var(--toolbarbutton-border-radius);
  transition-property: background-color, border-color;
  transition-duration: 150ms;
  color: inherit;
}

.toolbarbutton-menubutton-button {
  min-height: 0;
  margin: 0;
  border-top-style: none;
  border-inline-start-style: none;
  border-bottom-style: none;
}
/* ... */

